--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "ng test",
     "test:ci": "ng test --browsers=ChromeHeadless --watch=false --code-coverage",
     "e2e": "ng e2e",
-    "build": "npm install; ng build",
+    "build": "npm install && ng build",
     "build:prod": "ng build --base-href=/ng-matero/",
     "build:schematics": "npm run copy:schematics && cd schematics && npm run build && cd .. && npm run build:starter",
     "build:starter": "gulp --gulpfile gulpfile.js",
