--- a/angular.json
+++ b/angular.json
@@ -22,7 +22,7 @@
               "moment",
               "photoviewer"
             ],
-            "outputPath": "dist/ng-matero",
+            "outputPath": "dist/assignment",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
