--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@ngx-translate/http-loader": "^7.0.0",
     "angular-in-memory-web-api": "~0.15.0",
     "apexcharts": "^3.39.0",
+    "date-fns": "^2.30.0",
     "express": "^4.18.2",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.41",
